<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="30dp">
       <androidx.cardview.widget.CardView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="fill"
           app:cardCornerRadius="8dp"
           app:cardElevation="8dp"
           android:padding="20dp"
           android:layout_alignParentEnd="true">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/search_bg"
               android:paddingStart="5dp">
           <TextView
               android:id="@+id/box_amount"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/lbl_value"
               android:textStyle="bold"
               android:textSize="30sp"
               android:layout_alignParentTop="true"
               android:layout_alignParentStart="true"/>
           <TextView
               android:id="@+id/box_action"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="30dp"
               android:text="@string/temp_action"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_below="@id/box_amount"/>
               <TextView
               android:id="@+id/box_date"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="30dp"
               android:text="@string/lbl_date"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_below="@id/box_amount"
               android:layout_toRightOf="@id/box_action"/>
               <TextView
               android:id="@+id/box_channel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="30dp"
               android:text="@string/temp_channel"
               android:layout_marginBottom="10dp"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_below="@id/box_action"/>
               <TextView
               android:id="@+id/box_desc"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="30dp"
               android:text="@string/temp_desc"
               android:layout_marginBottom="10dp"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_below="@id/box_channel"/>
           </RelativeLayout>

       </androidx.cardview.widget.CardView>
   </RelativeLayout>

</LinearLayout>