<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_row"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#CDC9C9"
        app:cardElevation="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_dep_name"
                android:padding="5dp"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_type"
                android:padding="5dp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"/>
            <TextView
                android:id="@+id/totPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_value"
                android:padding="5dp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/byWhom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_by_whom"
                android:padding="5dp"
                android:textStyle="bold"
                android:layout_below="@id/name"/>
            <TextView
                android:id="@+id/noOfItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_value"
                android:paddingTop="5dp"
                android:paddingStart="5dp"
                android:paddingBottom="5dp"
                android:paddingEnd="2dp"
                android:textStyle="bold"
                android:layout_below="@id/name"
                android:layout_toRightOf="@id/byWhom"/>
            <TextView
                android:id="@+id/LblOfItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_vw_nos"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold"
                android:layout_below="@id/name"
                android:layout_toRightOf="@id/noOfItems"/>
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_value"
                android:paddingTop="5dp"
                android:paddingStart="2dp"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:textStyle="bold"
                android:layout_below="@id/name"
                android:layout_toRightOf="@id/LblOfItems"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>